prd/docs/hugo-nginx-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docs-deploy
  labels:
    app: docs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docs
  template:
    metadata:
      labels:
        app: docs
    spec:
      containers:
      - name: docs
        image: eif0/k3cloud-docs:0.1.1
        ports:
        - containerPort: 80
