prd/docs/hugo-nginx-svc.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: docs-svc
spec:
  selector:
    app: docs
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
