prd/docs/hugo-nginx-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: docs-ingress
  annotations:
    cert-manager.io/issuer: docs-letsencrypt
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https

spec:
  tls:
  - hosts:
    - docs.k3lab.gq
    secretName: docs-secret
  rules:
  - host: docs.k3lab.gq
    http:
      paths:
      - path: /
        backend:
          serviceName: docs-svc
          servicePort: 80
